# network-switcher

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/network_switcher/: __init__.py  __main__.py  cli.py  core.py  gui.py  gui_helpers.py
tests/: test_gateway_preservation.py  test_gui_helpers.py
