[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-switcher"
version = "1.0.1"
description = "Cross-platform GUI/CLI tool to switch ethernet subnet masks."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Simley", email = "simley@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
requires-python = ">=3.9"

[project.scripts]
network-switcher = "network_switcher.cli:main"
network-switcher-gui = "network_switcher.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
